--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.1.0",
     "react-loader-spinner": "^5.3.4",
     "react-scripts": "^5.0.1",
-    "styled-components": "^6.0.3",
+    "react-toastify": "^9.1.3",
+    "styled-components": "^6.0.4",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
