--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "axios": "^1.4.0",
     "nanoid": "^4.0.2",
     "notiflix": "^3.2.6",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.4",
     "web-vitals": "^2.1.3"
